@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.virginradio.it" name="Virgin Radio Italia" version="1.0.7" provider-name="NeverWise">
+<addon id="plugin.video.virginradio.it" name="Virgin Radio Italia" version="1.0.8" provider-name="NeverWise">
   <requires>
     <import addon="xbmc.python" version="2.14.0"/>
-    <import addon="script.module.neverwise" version="1.0.8"/>
-    <import addon="plugin.video.youtube" version="4.4.10" optional="true"/>
+    <import addon="script.module.neverwise" version="1.1.0"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
-    <provides>audio video</provides>
+    <provides>audio video image</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
-    <summary lang="it">Virgin Radio Italia</summary>
-    <summary lang="en">Virgin Radio Italia</summary>
-    <description lang="it">Video e musica dal sito virginradio.it.</description>
-    <description lang="en">Video and music from the site virginradio.it.</description>
-    <disclaimer lang="it">Alcune parti di questo addon potrebbero non essere legali nel tuo paese di residenza. Si prega di verificare la legislazione in vigore prima di installare.</disclaimer>
-    <disclaimer lang="en">Some parts of this addon may not be legal in your country of residence. Please check with your local laws before installing.</disclaimer>
+    <summary lang="it_IT">Virgin Radio Italia</summary>
+    <summary lang="en_GB">Virgin Radio Italia</summary>
+    <description lang="it_IT">Video e musica dal sito virginradio.it.</description>
+    <description lang="en_GB">Video and music from the site virginradio.it.</description>
+    <disclaimer lang="it_IT">Alcune parti di questo addon potrebbero non essere legali nel tuo paese di residenza. Si prega di verificare la legislazione in vigore prima di installare.</disclaimer>
+    <disclaimer lang="en_GB">Some parts of this addon may not be legal in your country of residence. Please check with your local laws before installing.</disclaimer>
     <language>it</language>
     <license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
     <forum></forum>
