@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <settings>
   <setting id="vid_quality" type="enum" label="30000" lvalues="30001|30002" default="0"/>
+  <setting type="lsep" label="30006"/>
+  <setting id="ffmpeg_path" type="file" label="30007" value=""/>
+  <setting id="download_path" type="folder" label="30008" value=""/>
 </settings>
